# vcenter-mcp

./: .gitignore  NOTICE  README.md  pyproject.toml  requirements.txt
src/vcenter_mcp/: __main__.py  client.py  config.py  server.py  setup_cmd.py
src/vcenter_mcp/tools/: vm_create.py  vm_delete.py  vm_list.py  vm_power.py
tests/: test_client.py  test_config.py
