[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vcenter-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "pyVmomi",
]

[project.scripts]
vcenter-mcp = "vcenter_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
